modify travis yaml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t udagram-api-user .
-  - docker tag simple-node hafizuddiiin/udagram-api-user:latest
+  - docker tag udagram-api-user hafizuddiiin/udagram-api-user:latest
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
